Cambio Total de la interfaz de usuario

--- a/app/src/main/res/layout/activity_datos_dispositivo.xml
+++ b/app/src/main/res/layout/activity_datos_dispositivo.xml
@@ -1,21 +1,26 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent"
+    android:background="@color/material_deep_teal_200"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="es.gva.edu.iesperemaria.p66_videoview.DatosDispositivoActivity">
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/scrollView" >
+        android:layout_height="wrap_content">
 
-        <TextView android:text="@string/DatosDisposistivo" android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <TextView
             android:id="@+id/tvDatosDevice"
-            android:textColor="#ff1b17ff"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/primary_material_dark"
+            android:text="@string/DatosDisposistivo"
+            android:textColor="@color/material_deep_teal_200"
             android:textSize="15dp" />
     </ScrollView>
 
-</RelativeLayout>
+</LinearLayout>
