--- a/app/src/main/res/layout/activity_caracteristicas.xml
+++ b/app/src/main/res/layout/activity_caracteristicas.xml
@@ -1,74 +1,217 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="es.gva.edu.iesperemaria.p66_videoview.ListaVideosActivity"
-    android:orientation="vertical">
+    tools:context="es.gva.edu.iesperemaria.p66_videoview.ListaVideosActivity">
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@color/material_deep_teal_500"
+        android:text="@string/caracteristicas_bateriaTitulo" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="left"
+        android:background="@color/material_deep_teal_500" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:text="@string/caracteristicas_bateriaTitulo"
+        android:id="@+id/tvTecnolgy"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvAPARTADO_BATTERY"
-        android:layout_gravity="center_horizontal" />
-
-    <TextView  android:layout_width="wrap_content"
+        android:layout_gravity="left"
+        android:background="@color/material_deep_teal_200"
+        android:elegantTextHeight="false"
+        android:singleLine="false"
         android:text=""
-        android:layout_height="wrap_content"
-        android:id="@+id/tvTecnolgy" />
+        android:textAlignment="center"
+        android:textColor="@color/background_floating_material_dark" />
 
-    <TextView  android:layout_width="wrap_content"
-        android:text=""
-        android:layout_height="wrap_content"
-        android:id="@+id/tvEstado" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="left"
+        android:background="@color/material_deep_teal_500" />
 
-    <TextView  android:layout_width="wrap_content"
-        android:text=""
+    <TextView
+        android:id="@+id/tvEstado"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvTemperatura" />
+        android:layout_gravity="left"
+        android:background="@color/material_deep_teal_200"
+        android:elegantTextHeight="false"
+        android:singleLine="false"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@color/background_floating_material_dark" />
 
-    <TextView  android:layout_width="wrap_content"
-        android:text=""
-        android:layout_height="wrap_content"
-        android:id="@+id/tvVoltage" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="left"
+        android:background="@color/material_deep_teal_500" />
 
-    <TextView  android:layout_width="wrap_content"
-        android:text=""
+    <TextView
+        android:id="@+id/tvTemperatura"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvNivelBateriaActual" />
+        android:layout_gravity="left"
+        android:background="@color/material_deep_teal_200"
+        android:elegantTextHeight="false"
+        android:singleLine="false"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@color/background_floating_material_dark" />
 
-    <TextView  android:layout_width="wrap_content"
-        android:text=""
-        android:layout_height="wrap_content"
-        android:id="@+id/tvNivelBateriaMaximo" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="left"
+        android:background="@color/material_deep_teal_500" />
 
-    <TextView  android:layout_width="wrap_content"
-        android:text=""
+    <TextView
+        android:id="@+id/tvVoltage"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvTomaDeCorriente" />
+        android:layout_gravity="left"
+        android:background="@color/material_deep_teal_200"
+        android:elegantTextHeight="false"
+        android:singleLine="false"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@color/background_floating_material_dark" />
 
-    <TextView  android:layout_width="wrap_content"
-        android:text=""
-        android:layout_height="wrap_content"
-        android:id="@+id/tvSaludBateria" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="left"
+        android:background="@color/material_deep_teal_500" />
 
-    <TextView  android:layout_width="wrap_content"
-        android:text=""
+    <TextView
+        android:id="@+id/tvNivelBateriaActual"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvpresentBattery" />
+        android:layout_gravity="left"
+        android:background="@color/material_deep_teal_200"
+        android:elegantTextHeight="false"
+        android:singleLine="false"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@color/background_floating_material_dark" />
 
-    <TextView  android:layout_width="wrap_content"
-        android:text=""
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="left"
+        android:background="@color/material_deep_teal_500" />
+
+    <TextView
+        android:id="@+id/tvNivelBateriaMaximo"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvbatteryStatusIcon" />
+        android:layout_gravity="left"
+        android:background="@color/material_deep_teal_200"
+        android:elegantTextHeight="false"
+        android:singleLine="false"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@color/background_floating_material_dark" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="left"
+        android:background="@color/material_deep_teal_500" />
+
+    <TextView
+        android:id="@+id/tvTomaDeCorriente"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:background="@color/material_deep_teal_200"
+        android:elegantTextHeight="false"
+        android:singleLine="false"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@color/background_floating_material_dark" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="left"
+        android:background="@color/material_deep_teal_500" />
+
+    <TextView
+        android:id="@+id/tvSaludBateria"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:background="@color/material_deep_teal_200"
+        android:elegantTextHeight="false"
+        android:singleLine="false"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@color/background_floating_material_dark" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="left"
+        android:background="@color/material_deep_teal_500" />
+
+    <TextView
+        android:id="@+id/tvpresentBattery"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:background="@color/material_deep_teal_200"
+        android:elegantTextHeight="false"
+        android:singleLine="false"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@color/background_floating_material_dark" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="left"
+        android:background="@color/material_deep_teal_500" />
+
+    <TextView
+        android:id="@+id/tvbatteryStatusIcon"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:background="@color/material_deep_teal_200"
+        android:elegantTextHeight="false"
+        android:singleLine="false"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@color/background_floating_material_dark" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="left"
+        android:background="@color/material_deep_teal_500" />
 
     <Switch
+        android:id="@+id/tvSwitchRegistrp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Activar Registro"
-        android:id="@+id/tvSwitchRegistrp"
-        android:checked="false" />
+        android:layout_gravity="center_horizontal"
+        android:checked="false"
+        android:text="Activar Registro" />
 
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:background="@color/material_deep_teal_500" />
 </LinearLayout>
