--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,64 +1,6 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="es.gva.edu.iesperemaria.p66_videoview.ListaVideosActivity"
-    android:orientation="vertical">
-
-    <RadioGroup
-        android:id="@+id/main_radioOpciones"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <RadioButton
-            android:id="@+id/main_radioModoFabricante"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:text="@string/main_radio_modo_fabricante"
-            android:checked="false"
-            android:layout_weight="1"
-            android:textSize="20dp" />
-
-        <RadioButton
-            android:id="@+id/main_radioModoUsuario"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:checked="false"
-            android:text="@string/main_radio_modo_usuario"
-            android:layout_weight="1"
-            android:textSize="20dp" />
-        <RadioButton
-            android:id="@+id/main_radioVerCaracteristicas"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:checked="false"
-            android:text="@string/main_radio_caracteristicas_bateria"
-            android:layout_weight="1"
-            android:textSize="20dp" />
-
-    </RadioGroup>
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/main_iniciar_btn"
-        android:id="@+id/main_btnIniciarTest" />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:text="@string/main_registro"
-        android:id="@+id/main_btnRegistroBateria"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
-        android:background="@drawable/max_battery"
-        android:elegantTextHeight="false"
-        android:textColor="#ffdef3ff"
-        android:gravity="center_horizontal" />
-
-
-</LinearLayout>
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/reciclador"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="3dp"
+    android:scrollbars="vertical" />
