--- a/app/src/main/res/layout/activity_ver_video.xml
+++ b/app/src/main/res/layout/activity_ver_video.xml
@@ -1,13 +1,12 @@
-
-
-<LinearLayout
+<RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="vertical">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:baselineAligned="false">
 <VideoView
     android:id="@+id/surface_view"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center_horizontal" />
-</LinearLayout>
+    android:layout_gravity="fill_vertical"
+    android:layout_weight="1" />
+</RelativeLayout>
